# TAFFY

./: .gitignore  README.md  pyproject.toml
src/: basic_search.py  cli.py  enums.py
src/connections/: constructors.py  enums.py  wikipedia.py
test/: conftest.py  test_basic_search.py
test/test_connections/: conftest.py  test_harness.py  test_wikipedia.py
tests/: test_cli.py
tests/connections/: conftest.py  test_constructors.py  test_wikipedia.py
