[project]
name = "taffy"
version = "0.1.0"
description = ""
authors = [
    {name = "Armand Alvarez",email = "aralvarez159@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4 (>=0.0.2,<0.0.3)",
    "requests (>=2.32.5,<3.0.0)",
    "pytest (>=8.4.2,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.pytest.ini_options]
pythonpath = "src"

[tool.pyright]
venvPath = "."
venv = ".venv"
