[project]
name = "taffy"
version = "0.1.0"
description = "Terminal Answer Finder For You"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pip>=25.3",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "typer>=0.21.0",
    "typing>=3.10.0.0",
]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
